refactor: add show/hide password icon

--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -15,19 +15,29 @@
         </div>
         <div class="form-row">
           <div class="col invalid-message-highlight">
-            <input
-              required
-              (ngModelChange)="this.showIsInvalid = false;"
-              appAutoFocus
-              autocomplete="current-password"
-              class="form-control"
-              data-id="passwordInput"
-              formControlName="password"
-              id="password"
-              placeholder="{{ 'home.placeholder' | translate }}"
-              type="password"
-              aria-describedby="invalid"
-            >
+            <div class="input-group">
+              <input
+                required
+                (ngModelChange)="this.showIsInvalid = false;"
+                appAutoFocus
+                autocomplete="current-password"
+                class="form-control"
+                data-id="passwordInput"
+                formControlName="password"
+                id="password"
+                placeholder="{{ 'home.placeholder' | translate }}"
+                [type]="passwordHidden ? 'password' : 'text'"
+                aria-describedby="invalid"
+              >
+              <button
+                class="btn border-start-0"
+                type="button"
+                (click)="togglePasswordVisibility()"
+                [attr.aria-description]="'password.' + passwordHidden ? 'showPassword' : 'hidePassword' | translate"
+              >
+                <i class="fa" aria-hidden="true" [ngClass]="passwordHidden ? 'fa-eye-slash' : 'fa-eye'"></i>
+              </button>
+            </div>
             @if (showIsInvalid && isInvalid) {
               <div
                 class="invalid-message"
