--- a/src/app/password/password.component.scss
+++ b/src/app/password/password.component.scss
@@ -8,6 +8,16 @@
   }
 }
 
+.input-group button {
+  background-color: white;
+  border-radius: 0 .5rem .5rem 0;
+  border-color: $primary-background-color !important;
+
+  &:focus {
+    border-color: $s-h-blue !important;
+  }
+}
+
 .btn-submit {
   display: flex;
   color: $btn-text;
