--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -33,7 +33,7 @@
                 class="btn border-start-0"
                 type="button"
                 (click)="togglePasswordVisibility()"
-                [attr.aria-description]="'password.' + passwordHidden ? 'showPassword' : 'hidePassword' | translate"
+                [attr.aria-description]="'password.' + (passwordHidden ? 'showPassword' : 'hidePassword') | translate"
               >
                 <i class="fa" aria-hidden="true" [ngClass]="passwordHidden ? 'fa-eye-slash' : 'fa-eye'"></i>
               </button>
