--- a/src/app/shared/components/stepper/stepper.component.scss
+++ b/src/app/shared/components/stepper/stepper.component.scss
@@ -1,31 +1,27 @@
 @import "src/default";
 @import 'bootstrap/scss/mixins';
 
-.stepper-text {
-  width: max-content;
-}
+.container {
+  max-width: 300px;
 
-.circle {
-  width: 20px;
-  height: 20px;
-  border-radius: 20px;
-  border: 3px solid $dark-gray;
-  background-color: $medium-gray;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25), 0 2px 5px 0 rgba(0, 0, 0, 0.18);
-}
+  .circle {
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    border: 3px solid $dark-gray;
+    background-color: $medium-gray;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25), 0 2px 5px 0 rgba(0, 0, 0, 0.18);
+  }
 
-.circle-active {
-  border-color: $dark-gray;
-  background-color: $secondary;
-}
+  .circle-active {
+    border-color: $dark-gray;
+    background-color: $secondary;
+  }
 
-.line {
-  border: none;
-  border-top-width: 0;
-  border-bottom-width: 0;
-  background-color: $stepperLine;
-  width: $spacer*4;
-  height: 2px;
-  margin: auto 0;
-  padding: 0;
+  .line {
+    width: 100%;
+    height: 2px;
+    background: $stepperLine;
+    flex: 1;
+  }
 }
