feat: warn user that the appointment is already created
- display warning
- remove back navigation
- change forward navigation text
- remove unused service

! Dev hint:
Do not refactor the "else then if" structure into a single "else if"

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -39,18 +39,32 @@
         class="btn-next-large"
         forwardText="{{ 'poll.change' | translate }}"
       ></app-navigation>
-    }
-    @if (!isAdmin) {
-      <app-navigation
-        (backward)="goBack()"
-        (forward)="sendCreateAppointment()"
-        [hasBackwardButton]="true"
-        [hasForwardButton]="true"
-        [isInvalid]="false"
-        backwardText="{{ 'navigation.revise' | translate }}"
-        class="btn-next-large"
-        forwardText="{{ 'poll.start' | translate }}"
-      ></app-navigation>
+    } @else {
+      @if (!isAppointmentSent()) {
+        <app-navigation
+          (backward)="goBack()"
+          (forward)="sendCreateAppointment()"
+          [hasBackwardButton]="true"
+          [hasForwardButton]="true"
+          [isInvalid]="false"
+          backwardText="{{ 'navigation.revise' | translate }}"
+          class="btn-next-large"
+          forwardText="{{ 'poll.start' | translate }}"
+        ></app-navigation>
+      } @else {
+        <div class="row mt-2 px-3">
+          <div class="alert alert-warning">
+            {{ 'poll.warningAlreadyCreated' |  translate }}
+          </div>
+        </div>
+        <app-navigation
+          (forward)="sendCreateAppointment()"
+          [hasForwardButton]="true"
+          [isInvalid]="false"
+          class="btn-next-large"
+          forwardText="{{ 'poll.showLinks' | translate }}"
+        ></app-navigation>
+      }
     }
   </div>
 </div>
