refactor: replace scss `$primary` with css variable

--- a/src/app/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/admin-dashboard/admin-dashboard.component.scss
@@ -1,7 +1,7 @@
 @import "src/default";
 
 span {
-  color: $primary;
+  color: var(--primary);
   text-decoration: underline;
   cursor: pointer;
 }
