--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -311,7 +311,7 @@ $poll-data-cell-invalid-message-min-height: 24px;
     }
 
     .form-control {
-      color: $primary;
+      color: var(--primary);
       border-color: $medium-gray;
       background-color: $light-gray;
     }
