refactor: set fallback value for `$primary`

--- a/src/app/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/admin-dashboard/admin-dashboard.component.scss
@@ -1,7 +1,7 @@
 @import "src/default";
 
 span {
-  color: var(--primary);
+  color: var(--primary, #{$primary});
   text-decoration: underline;
   cursor: pointer;
 }
