--- a/src/app/juristic/terms-of-service/terms-of-service.component.scss
+++ b/src/app/juristic/terms-of-service/terms-of-service.component.scss
@@ -24,7 +24,7 @@ content h1 {
 }
 
 content h1 > a {
-  color: var(--primary);
+  color: var(--primary, #{$primary});
   display: inline;
   text-align: center;
 }
