--- a/src/app/shared/components/dates-overview/dates-overview.component.scss
+++ b/src/app/shared/components/dates-overview/dates-overview.component.scss
@@ -1,7 +1,7 @@
 @import "src/default.scss";
 
 .date-time-overview table {
-  color: var(--primary);
+  color: var(--primary, #{$primary});
 
   th {
     min-width: $suggested-date-desktop-min-width;
