refactor: replace `$secondary`

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,7 +14,7 @@ label[for="title"] {
 #btn-submit {
   display: flex;
   color: $btn-text;
-  background: $secondary;
+  background: var(--secondary, #{$secondary});
   background-origin: content-box;
   background-size: $form-icon-width * 0.6 $form-icon-height * 0.6;
   align-items: center;
