--- a/src/app/shared/components/stepper/stepper.component.scss
+++ b/src/app/shared/components/stepper/stepper.component.scss
@@ -15,7 +15,7 @@
 
   .circle-active {
     border-color: $dark-gray;
-    background-color: $secondary;
+    background-color: var(--secondary, #{$secondary});
   }
 
   .line {
