--- a/src/app/password/password.component.scss
+++ b/src/app/password/password.component.scss
@@ -21,7 +21,7 @@
 .btn-submit {
   display: flex;
   color: $btn-text;
-  background: $secondary;
+  background: var(--secondary, #{$secondary});
   background-origin: content-box;
   background-size: $form-icon-width * 0.6 $form-icon-height * 0.6;
   align-items: center;
