refactor: replace `$light-gray`

--- a/src/app/create-suggested-dates/create-suggested-dates.component.scss
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.scss
@@ -92,7 +92,7 @@ form {
   }
 }
 
-$input-background-color: $light-gray;
+$input-background-color: var(--light-gray, #{$light-gray});
 
 .input-group-prepend {
   background-color: $input-background-color !important;
