--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -313,7 +313,7 @@ $poll-data-cell-invalid-message-min-height: 24px;
     .form-control {
       color: var(--primary, #{$primary});
       border-color: $medium-gray;
-      background-color: $light-gray;
+      background-color: var(--light-gray, #{$light-gray});
     }
 
   }
