--- a/src/app/shared/components/combobox/combobox.component.scss
+++ b/src/app/shared/components/combobox/combobox.component.scss
@@ -64,7 +64,7 @@
   }
 
   &[aria-selected="true"] {
-    background-color: $light-gray;
+    background-color: var(--light-gray, #{$light-gray});
     padding-right: 30px;
     position: relative;
 
