--- a/src/app/create-suggested-dates/create-suggested-dates.component.scss
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.scss
@@ -50,7 +50,7 @@ form {
 }
 
 .section-container .input-group .form-control {
-  border: 1px solid $medium-gray !important;
+  border: 1px solid var(--medium-gray, #{$medium-gray}) !important;
   border-radius: 0.5em !important;
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
