--- a/src/app/shared/components/stepper/stepper.component.scss
+++ b/src/app/shared/components/stepper/stepper.component.scss
@@ -9,7 +9,7 @@
     height: 20px;
     border-radius: 20px;
     border: 3px solid $dark-gray;
-    background-color: $medium-gray;
+    background-color: var(--medium-gray, #{$medium-gray});
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25), 0 2px 5px 0 rgba(0, 0, 0, 0.18);
   }
 
