--- a/src/app/shared/components/stepper/stepper.component.scss
+++ b/src/app/shared/components/stepper/stepper.component.scss
@@ -8,13 +8,13 @@
     width: 20px;
     height: 20px;
     border-radius: 20px;
-    border: 3px solid $dark-gray;
+    border: 3px solid var(--dark-gray, #{$dark-gray});
     background-color: var(--medium-gray, #{$medium-gray});
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25), 0 2px 5px 0 rgba(0, 0, 0, 0.18);
   }
 
   .circle-active {
-    border-color: $dark-gray;
+    border-color: var(--dark-gray, #{$dark-gray});
     background-color: var(--secondary, #{$secondary});
   }
 
