refactor: replace `$s-h-blue`

--- a/src/app/password/password.component.scss
+++ b/src/app/password/password.component.scss
@@ -14,7 +14,7 @@
   border-color: $primary-background-color !important;
 
   &:focus {
-    border-color: $s-h-blue !important;
+    border-color: var(--s-h-blue, #{$s-h-blue}) !important;
   }
 }
 
