--- a/src/app/poll/mobile-poll-table.component.scss
+++ b/src/app/poll/mobile-poll-table.component.scss
@@ -38,7 +38,7 @@ select {
 }
 
 .toolbar {
-  background-color: $s-h-blue-15;
+  background-color: var(--s-h-blue-15, #{$s-h-blue-15}) ;
   min-height: 50px;
 }
 
